--- a/index.html
+++ b/index.html
@@ -876,6 +876,8 @@
             box-shadow: none;
             line-height: 1.6;
             color: #222;
+            font-size: 12px;
+    text-align: left; /* ← 左揃え */
 
             width: 100%;
             /* ← 親要素いっぱいに広げる */
@@ -1601,7 +1603,7 @@
                     : '';
 
                 const priceInner = `
-    ${hasPrice ? `<span>価格：</span><strong>${price}</strong><br>` : ''}
+    ${hasPrice ? `<span>価格：</span>${price}<br>` : ''}
     ${timeContent}
   `.trim();
 
@@ -1620,7 +1622,7 @@
                     '',
                     '',
                     'マタニティ整体はお腹の赤ちゃんの心音を確認し、赤ちゃんが元気であることを施術の前後で確認します。<br>胎児の心音の確認をするマタニティ整体は助産院ならではです。<br>安心してご予約下さいませ。<br>整体は痛みを伴わない手技により心地よい時間をお過ごしいただけます。<br>お腹クッションもございますので、楽な姿勢で受けられます。<br>ベルトの装着方法や生活のアドバイス、家でできる軽い体操なども指導いたします。<br>病院ではなかなか聞けないお産の相談もお気軽にどうぞ。',
-                    '初初回：初診料 2,600円<br>半年以上あくと：再診料 1,100円<br>1年以上あくと：再診料 2,200円',
+                    '初回：初診料 2,600円<br>半年以上あくと：再診料 1,100円<br>1年以上あくと：再診料 2,200円',
                     ''
                 );
             } else if (treatmentId === 'treatment2') {
