--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: url('https://www.dropbox.com/scl/fi/xjnrxz3i5dtu8e9h7scgd/imgi_7_123657_business_pic_2.png?rlkey=9tg8niqs17q5nwvpivouj1qrg&st=13cnfgqb&raw=1') center / 190% no-repeat;
+            background: url('https://www.dropbox.com/scl/fi/gercij3987y1madd5mzsn/imgi_7_123657_business_pic_222222222222222.png?rlkey=107zptry2lk2vi6b8smrwpk88&st=cn5j1b23&raw=1') center / 190% no-repeat;
             /* ↑ cover の代わりに 120% とすると画像を少し拡大表示（100%が原寸） */
 
             color: #fff;
