--- a/index.html
+++ b/index.html
@@ -1497,6 +1497,8 @@
 
         // 各ボタンや入力フィールドでupdateDisplayInfoを呼び出すようにする
         document.getElementById('name').addEventListener('input', updateDisplayInfo);
+        document.getElementById('namehurigana').addEventListener('input', updateDisplayInfo);
+        document.getElementById('phone').addEventListener('input', updateDisplayInfo);
         document.querySelectorAll('.visit-buttons button').forEach(button => {
             button.addEventListener('click', updateDisplayInfo);
         });
