--- a/index.html
+++ b/index.html
@@ -1181,6 +1181,11 @@
         <div id="treatment-text" style="display: none; margin-bottom: 10px;"></div>
 
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
+        <div class="info-text">【予約時間】<br>
+            10:00 10:45 11:30 12:15 13:00<br>
+            14:00 14:45 15:30 16:15 です。<br>
+            指定の時間に沿ってご予約ください。<br>
+            指定した時間以外で設定された場合には変更いたします。</div>
         <div class="symptoms">
             <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">マタニティ整体</button>
             <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">産後整体</button>
@@ -1434,7 +1439,7 @@
                 : '・コースが未選択です';
 
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="${labelStyle}"><strong>メニュー</strong></span>・${selectedSymptom.join('<br>')}`
+                ? `<span style="${labelStyle}"><strong>メニュー</strong></span>${selectedSymptom.join('<br>')}`
                 : '・メニューが未選択です';
 
             const irradiationsText = irradiationsCount
@@ -1606,7 +1611,7 @@
                     : '';
 
                 const basicContent = hasBasic
-                    ? `<div class="treatment-basic"><span></span>${basic}</div>`
+                    ? `<div class="treatment-basic"><span></span><strong>${basic}</strong></div>`
                     : '';
 
                 // 出力順序を制御（タイトル→画像→詳細→料金→基本料金）
