--- a/index.html
+++ b/index.html
@@ -934,6 +934,80 @@
             pointer-events: none;
             /* クリック無効にしておく（選べない） */
         }
+
+        /* スクロール用のセクション */
+        .section {
+            padding: 50px 10px;
+            margin-top: 30px;
+        }
+
+        .small-text {
+            font-size: 18px;
+            /* 好きなサイズに変更可能 */
+        }
+
+        .birth-row {
+            display: flex;
+            gap: 10px;
+            margin: 8px 0 20px;
+        }
+
+        .birth-select {
+            flex: 1;
+            padding: 10px 12px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            font-size: 16px;
+            background: #fff;
+        }
+
+        .zip-row,
+        .addr-row,
+        .addr-street-row {
+            display: flex;
+            gap: 10px;
+            margin: 8px 0 12px;
+        }
+
+        .zip-row input {
+            flex: 1;
+            padding: 10px 12px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+        }
+
+        .zip-search-btn {
+            padding: 9px 10px;
+            border: none;
+            border-radius: 6px;
+            background: #58453b;
+            color: #fff;
+            cursor: pointer;
+            position: relative;
+            /* ← 相対位置指定を有効に */
+            top: -10px;
+            /* ← 上に12pxずらす */
+        }
+
+        .zip-row {
+            align-items: center;
+            transform: translateY(7px);
+            /* ← 見た目だけ下へ5px */
+        }
+
+        .addr-row input,
+        .addr-street-row input {
+            flex: 1;
+            padding: 10px 12px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+        }
+
+        .zip-help {
+            font-size: 12px;
+            color: #666;
+            margin-top: -11px;
+        }
     </style>
 </head>
 
@@ -965,8 +1039,20 @@
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">答えたくない</button>
         </div>
 
-        <div class="label">生年月日<span class="required">必須</span></div>
-        <input type="text" id="seinengappi" placeholder="生年月日を入力してください" oninput="saveInput('seinengappi')">
+        <div class="label">　　誕生日（西暦）<span class="required">必須</span></div>
+        <div class="birth-row">
+            <select id="birthYear" class="birth-select" aria-label="西暦（年）">
+                <option value="">西暦</option>
+            </select>
+            <select id="birthMonth" class="birth-select" aria-label="月">
+                <option value="">月</option>
+            </select>
+            <select id="birthDay" class="birth-select" aria-label="日">
+                <option value="">日</option>
+            </select>
+        </div>
+        <!-- 送信互換のため隠しフィールド（YYYY-MM-DD） -->
+        <input type="hidden" id="message3" />
 
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます</div>
@@ -1165,7 +1251,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2007397643-Mmm64enZ'
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -2239,6 +2325,86 @@
         function hideLoadingSpinner() {
             document.getElementById('loadingSpinner').style.display = 'none';
         }
+
+        (function initBirthdayPicker() {
+            const yearSel = document.getElementById('birthYear');
+            const monthSel = document.getElementById('birthMonth');
+            const daySel = document.getElementById('birthDay');
+            const hidden = document.getElementById('message3'); // ←既存submitForm互換
+
+            if (!yearSel || !monthSel || !daySel || !hidden) return;
+
+            // 年の候補（1900年〜今年）
+            const thisYear = new Date().getFullYear();
+            for (let y = thisYear; y >= 1900; y--) {
+                const opt = document.createElement('option');
+                opt.value = String(y);
+                opt.textContent = `${y}`;
+                yearSel.appendChild(opt);
+            }
+
+            // 月の候補（1〜12）
+            for (let m = 1; m <= 12; m++) {
+                const opt = document.createElement('option');
+                opt.value = String(m).padStart(2, '0');
+                opt.textContent = `${m}`;
+                monthSel.appendChild(opt);
+            }
+
+            function daysInMonth(year, month) {
+                // month: "01"〜"12"
+                return new Date(Number(year), Number(month), 0).getDate();
+            }
+
+            function updateDays() {
+                const y = yearSel.value;
+                const m = monthSel.value;
+                const selected = daySel.value; // 以前の選択を覚えておく
+                daySel.innerHTML = '<option value="">日</option>';
+
+                if (!y || !m) { syncHidden(); return; }
+
+                const dmax = daysInMonth(y, m);
+                for (let d = 1; d <= dmax; d++) {
+                    const v = String(d).padStart(2, '0');
+                    const opt = document.createElement('option');
+                    opt.value = v;
+                    opt.textContent = `${d}`;
+                    daySel.appendChild(opt);
+                }
+                // 以前の選択が生きていれば復元（超過したら未選択）
+                if (selected) {
+                    const exists = Array.from(daySel.options).some(o => o.value === selected);
+                    daySel.value = exists ? selected : '';
+                }
+                syncHidden();
+            }
+
+            function syncHidden() {
+                const y = yearSel.value;
+                const m = monthSel.value;
+                const d = daySel.value;
+                hidden.value = (y && m && d) ? `${y}年${m}月${d}日` : '';
+            }
+
+            // 既存値（復帰表示用）：YYYY-MM-DD を各セレクトへ展開
+            if (hidden.value && /^\d{4}-\d{2}-\d{2}$/.test(hidden.value)) {
+                const [yy, mm, dd] = hidden.value.split('-');
+                yearSel.value = yy;
+                monthSel.value = mm;
+                updateDays();
+                daySel.value = dd;
+                syncHidden();
+            } else {
+                // 初期化
+                updateDays();
+            }
+
+            yearSel.addEventListener('change', updateDays);
+            monthSel.addEventListener('change', updateDays);
+            daySel.addEventListener('change', syncHidden);
+        })();
+
     </script>
 </body>
 
