--- a/index.html
+++ b/index.html
@@ -288,17 +288,18 @@
             color: #141414;
         }
 
-.menu-sections {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin-bottom: 20px;
-}
+        .menu-sections {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
 
-.menu-sections button {
-    flex: 0 0 calc(50.0% - 10px); /* 横3列にする */
-    box-sizing: border-box;
-}
+        .menu-sections button {
+            flex: 0 0 calc(50.0% - 10px);
+            /* 横3列にする */
+            box-sizing: border-box;
+        }
 
         .date-inputs input[type="datetime-local"] {
             width: calc(100% - 22px);
@@ -974,7 +975,7 @@
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">男性</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">女性</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">答えたくない</button>
+            <button type="button" id="sanVisit" onclick="selectVisit(this)">答えたくない</button>
         </div>
 
         <div class="label">生年月日<span class="required">必須</span></div>
@@ -1177,7 +1178,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2007397643-Mmm64enZ'
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -1721,17 +1722,24 @@
             // 選択された日時をリセット
             selectedFullDate = '';
 
-            document.getElementById('firstVisit').classList.remove('active');
-            document.getElementById('repeatVisit').classList.remove('active');
+            // いったん全てのボタンの active を外す
+            ['firstVisit', 'repeatVisit', 'sanVisit'].forEach(id => {
+                const btn = document.getElementById(id);
+                if (btn) btn.classList.remove('active');
+            });
+
+            // クリックされたボタンを active に
             element.classList.add('active');
-            visitCount = element.innerText;
+            visitCount = element.innerText.trim();
 
-            // 選択された訪問回数に対応する時間を取得
-            selectedVisitTime = visitTimes[visitCount];
+            //（必要なら）訪問回数→時間マップを反映
+            selectedVisitTime = visitTimes[visitCount] || 0;
 
-            console.log('選択された訪問回数の時間:', selectedVisitTime);
+            // ✅ 選択を保存（再読み込み後に復元するため）
+            localStorage.setItem('selectedVisitId', element.id);
+            localStorage.setItem('visitCount', visitCount);
 
-            // カレンダーを更新するために取得する日付を渡す
+            // カレンダー更新
             fetchAvailability(currentDate);
         }
 
@@ -1808,6 +1816,17 @@
                     menuButton.classList.add('selected');
                 }
             });
+        });
+
+        document.addEventListener('DOMContentLoaded', function () {
+            const savedVisitId = localStorage.getItem('selectedVisitId');
+            if (savedVisitId) {
+                const savedBtn = document.getElementById(savedVisitId);
+                if (savedBtn) {
+                    // selectVisit を呼ぶと active クラスとカレンダー更新も一括で反映されます
+                    selectVisit(savedBtn);
+                }
+            }
         });
 
         function selectDate(cell) {
